--- a/template/embarqueForm.html
+++ b/template/embarqueForm.html
@@ -44,7 +44,7 @@
         </div>
         <p ng-show="form.userForm.HH.$invalid && !form.userForm.HH.$pristine" class="help-block">Hora requerido.</p>
         <p ng-show="form.userForm.MM.$invalid && !form.userForm.MM.$pristine" class="help-block">Minuto requerido.</p>
-
+        <label>Ingreso</label>                
         <div class="input-group">
             <span class="input-group-addon" title="* ingreso" >Ingreso</span>    
             <input type="number" name="ingreso" class="form-control ng-touched='{true}'" ng-model="emb.ingreso" required >
